--- a/src/app/pages/home/sections/skills/skills.component.scss
+++ b/src/app/pages/home/sections/skills/skills.component.scss
@@ -237,4 +237,7 @@
     justify-content: center;
     gap: 36px;
   }
+  .growth-hint {
+    min-width: 124px;
+  }
 }
